--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
+     <types>
         <members>*</members>
-        <name>ApexClass</name>
+        <name>Flow</name>
     </types>
     <types>
         <members>*</members>
-        <name>ApexComponent</name>
+        <name>RecordType</name>
     </types>
     <types>
         <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
+        <name>FlexiPage</name> 
     </types>
     <version>62.0</version>
 </Package>
